src/hackmysql.css
/* ... */
.ser {
  display:flex;
  flex-wrap:wrap;
  gap:0.8rem;
  margin-bottom:2rem;
}
div.pr {margin-bottom: 4em;}
div.pr a {
  text-decoration: none;
  font-weight: bold;
  background: light-dark(black, #303030);
  color: hotpink;
  padding: 0 1em;
  border: 0;
  border-radius: 9px;
}

/* ------------------------------------------------------------------------ */
/* Single Column                                                            */
/* ------------------------------------------------------------------------ */

@media screen and (max-width: 767px) { /* [430, 768)px mid */
  .submenu {
    position: absolute;
    left: 0;
    z-index: 1;
    margin: 0 1rem;
    width: calc(100% - 2rem);
    border-bottom: 5px solid var(--border);
  }
  div.page {
    display: grid;
    grid-template-columns: 100%;
    grid-template-areas:
      "toc"
      "art"
      "bird";
    margin: 0 1em;
  }
  div.page.path {
    grid-template-areas:
      "bird"
      "toc"
      "art";
  }
  nav#toc {
    grid-area: toc;
    line-height: 2.0rem;
    position: relative;
    padding: 0;
  }
  article {
    margin: 0;
    padding: 0;
    border: 0;
  }
  div#bird {
    grid-area: bird;
    padding: 0;
  }
  div#bird.path {
    position: unset;
    top: unset;
  }
  div.scroller {
    height: auto;
  }
  .home {
    margin: 1em;
    flex-direction: column;
  }
  .book-buttons {
    display: flex;
    flex-direction: row;
    gap: 1rem;
  }
  img.c75, img.c33 {width: 75vw;}
  footer {flex-direction:column}
}

/* ------------------------------------------------------------------------ */
/* Stacked menu <430px small screen                                         */
/* ------------------------------------------------------------------------ */

@media screen and (max-width: 429px) {
  nav#menu {
    min-height: auto;
    padding: 1rem;
  }
  .menuItem {
    display: block;
    min-height: auto;
  }
  .menuButton {
    min-height: auto;
    margin: 0.5rem 0;
  }
  .menuItem:last-child .menuButton {
    margin-bottom: 0;
  }
  .submenu {
    position: relative; /* expand in place */
    z-index: 0;
    border: 0;
    width: 100%;
    margin: 0.5rem 0;
    padding: 0;
    padding-left: 0.5rem;
  }
  .submenu::before, .submenu::after { display: none; }
  img.left {float:none; margin:auto; width:100%;}
  .sidebyside { flex-direction: column; }
}

.footnote-backref {
  font-size: 1.3em;
  text-decoration: none;
  vertical-align: bottom;
}

/* footer */
footer {
  margin-top: 2rem;
  min-height: 75px;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 1rem;
  flex-wrap: wrap;
  color: var(--dark-txt);
  background: light-dark(black, var(--dark-bg));
  border-top: 5px solid var(--border);
}
footer a { color: var(--border); text-decoration: none; }

.notfound {margin: 1rem auto; width: 50%;}

.post-content .post-message p { color: light-dark(var(--light-txt), var(--dark-txt)); }

/* flags */
.show {display:block;}
.drop {text-decoration:underline; text-decoration-color:hotpink; text-underline-position:under;}
.hide {visibility:hidden; height:0;}
.noborder {border:0;padding:0;}
.zen {position:fixed;top:1rem;right:1.5rem;padding:0;}

.print-copyright { visibility: hidden; height: 0; }
@media print {
  nav#menu, footer {display: none;}
  div#bird, nav#toc, button#focus {visibility: hidden;}
  .print-copyright {
    visibility: visible;
    height: auto;
    margin-top: 4rem;
  }
}

/* code */
div.chroma {
  background-color: light-dark(var(--light-bg), var(--dark-bg)); /* full bg  */
}
table.lntable tr{ border: 0; }
td.lntd:first-child > pre.chroma {
  padding: 0.5em 0em;
   color: light-dark(var(--light-txt), var(--dark-txt));
  background-color: light-dark(var(--light-bg), var(--dark-bg));
}
pre {
  line-height: 1.5em;
  padding: 0.5em;
  padding-right: 2em;
  width: 100%;
  overflow-x: auto;
  border-radius: 5px;
  color: light-dark(black, var(--dark-txt));
  background-color: light-dark(#f5f5f5, black);
  font-size: 13px;
  min-width: 33%;
}
pre.chroma {
  background-color: black; /* code bg */
  width: fit-content;
  -moz-tab-size:4;
  -o-tab-size:4;
  tab-size:4;
}
pre code {
  white-space: pre;
  word-wrap: normal;
}

/* Background */ .bg { color: #f8f8f2; background-color: #272822; }
/* PreWrapper */ .chroma { color: #f8f8f2; background-color: #272822; }
/* Other .chroma .x {} */
/* Error */ .chroma .err { color:red; /*color: #960050;*/ background-color: #1e0010 }
/* CodeLine .chroma .cl {} */
/* LineLink */ .chroma .lnlinks { outline: none; text-decoration: none; color: inherit }
/* LineTableTD */ .chroma .lntd { vertical-align: top; padding: 0; margin: 0; border: 0; }
/* LineTable */ .chroma .lntable { border-spacing: 0; padding: 0; margin: 0; border: 0; }
/* LineHighlight */ .chroma .hl { background-color: #3c3d38 }
/* LineNumbersTable */ .chroma .lnt { white-space: pre; -webkit-user-select: none; user-select: none; margin-right: 0.4em; padding: 0 0.4em 0 0.4em;color: #7f7f7f }
/* LineNumbers */ .chroma .ln { white-space: pre; -webkit-user-select: none; user-select: none; margin-right: 0.4em; padding: 0 0.4em 0 0.4em;color: #7f7f7f }
/* Line */ .chroma .line { display: flex; }
/* Keyword */ .chroma .k { color: #66d9ef }
/* KeywordConstant */ .chroma .kc { color: #66d9ef }
/* KeywordDeclaration */ .chroma .kd { color: #66d9ef }
/* KeywordNamespace */ .chroma .kn { color: #f92672 }
/* KeywordPseudo */ .chroma .kp { color: #66d9ef }
/* KeywordReserved */ .chroma .kr { color: #66d9ef }
/* KeywordType */ .chroma .kt { color: #66d9ef }
/* Name .chroma .n {} */
/* NameAttribute */ .chroma .na { color: #a6e22e }
/* NameBuiltin .chroma .nb {} */
/* NameBuiltinPseudo .chroma .bp {} */
/* NameClass */ .chroma .nc { color: #a6e22e }
/* NameConstant */ .chroma .no { color: #66d9ef }
/* NameDecorator */ .chroma .nd { color: #a6e22e }
/* NameEntity .chroma .ni {} */
/* NameException */ .chroma .ne { color: #a6e22e }
/* NameFunction */ .chroma .nf { color: #a6e22e }
/* ... */

